--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 theme: jekyll-theme-minimal
+# The title of your blog. Used in the sidebar and the browser tab.
+title: My app | Jenny的小站
+
+# A short description (~150 chars) of the page used for the meta description tag.
+# Can use markdown, but no more than one paragraph (enforced by `>`)
+description:           >
+  Web apps made by Jenny HOU
+favicon: 'https://www.houzhenni.com/img/favicon.ico'
